--- a/Sina/Sina/Classes/Main/Home/QRCode/QRCode.storyboard
+++ b/Sina/Sina/Classes/Main/Home/QRCode/QRCode.storyboard
@@ -35,7 +35,7 @@
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="kLk-Cn-Eqx" secondAttribute="bottom" id="5kE-g2-iJ4"/>
                                     <constraint firstItem="X1I-Ed-Sso" firstAttribute="height" secondItem="6Uu-zK-Rcb" secondAttribute="height" id="Cht-uY-TCV"/>
@@ -49,6 +49,12 @@
                                     <constraint firstItem="X1I-Ed-Sso" firstAttribute="centerX" secondItem="6Uu-zK-Rcb" secondAttribute="centerX" id="uHV-e7-3oM"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="siI-b6-ISF">
+                                <state key="normal" title="我的名片"/>
+                                <connections>
+                                    <action selector="createMyCard:" destination="fgh-g8-bIb" eventType="touchUpInside" id="5gK-ye-KIz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -56,6 +62,8 @@
                             <constraint firstItem="sDg-FL-oCz" firstAttribute="top" secondItem="1hL-H0-XnL" secondAttribute="bottom" id="LQa-PD-rv3"/>
                             <constraint firstAttribute="trailing" secondItem="1hL-H0-XnL" secondAttribute="trailing" id="QHX-Z5-smq"/>
                             <constraint firstItem="6Uu-zK-Rcb" firstAttribute="centerY" secondItem="HQq-Wo-9j2" secondAttribute="centerY" id="Qs7-DN-LDY"/>
+                            <constraint firstItem="siI-b6-ISF" firstAttribute="centerX" secondItem="HQq-Wo-9j2" secondAttribute="centerX" id="es6-Ax-aoQ"/>
+                            <constraint firstItem="siI-b6-ISF" firstAttribute="top" secondItem="6Uu-zK-Rcb" secondAttribute="bottom" constant="95" id="mmK-Ad-T8Q"/>
                             <constraint firstItem="6Uu-zK-Rcb" firstAttribute="centerX" secondItem="HQq-Wo-9j2" secondAttribute="centerX" id="qm5-sG-7vP"/>
                         </constraints>
                     </view>
